[gd_scene load_steps=5 format=3 uid="uid://bkg68bp6fvny"]

[ext_resource type="Script" uid="uid://csjdousbl2sns" path="res://Code/Scenes/UI/List/discard_list.gd" id="1_dht7p"]
[ext_resource type="PackedScene" uid="uid://bttlpdvhmocn3" path="res://Scenes/UI/Lists/header.tscn" id="2_uc5d3"]
[ext_resource type="PackedScene" uid="uid://dwn2qsmdqyhiw" path="res://Scenes/UI/Lists/playing_list.tscn" id="3_n3fpl"]
[ext_resource type="PackedScene" uid="uid://c28rtuj3kak48" path="res://Scenes/UI/Lists/Footer.tscn" id="4_jlu0o"]

[node name="DiscardList" type="PanelContainer"]
clip_contents = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_right = -120.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_dht7p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Header" parent="VBoxContainer" node_paths=PackedStringArray("dragging_node", "shrinkNodes", "hideNodes") instance=ExtResource("2_uc5d3")]
unique_name_in_owner = true
layout_mode = 2
dragging_node = NodePath("../..")
shrinkNodes = [NodePath("../PlayingList")]
hideNodes = [NodePath("../HBoxContainer")]

[node name="PlayingList" parent="VBoxContainer" node_paths=PackedStringArray("par") instance=ExtResource("3_n3fpl")]
unique_name_in_owner = true
layout_mode = 2
par = NodePath("../..")
stack_act = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Footer" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("dragging_node") instance=ExtResource("4_jlu0o")]
unique_name_in_owner = true
layout_mode = 2
dragging_node = NodePath("../../..")

[node name="Action" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Discard"

[connection signal="close_button_pressed" from="VBoxContainer/Header" to="." method="_on_header_close_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Action" to="." method="_on_discard_pressed"]
